<resources>
    <string name="app_name">DeliciousRice</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="nh_p_email_v_m_t_kh_u_c_a_b_n">Nhập email và mật khẩu của bạn</string>
    <string name="nh_p_email">Nhập email</string>
    <string name="qu_n_m_t_kh_u">Quên mật khẩu ?</string>
    <string name="kh_ng_c_t_i_kho_n">Không có tài khoản?</string>
    <string name="d_c_t_k">Bạn đã có tài khoản?</string>
    <string name="nh_p_th_ng_tin_ng_nh_p_c_a_b_n">Nhập thông tin đăng ký của bạn</string>
    <string name="nh_p_password">Nhập Password</string>
    <string name="h_v_t_n">Họ và tên</string>
    <string name="email">Email</string>
    <string name="nh_p_m_t_kh_u">Nhập mật khẩu</string>
    <string name="nh_p_l_i_m_t_kh_u">Nhập lại mật khẩu</string>
    <string name="vui_l_ng_nh_p_email_ho_c_s_di_ng_t_m_ki_m_t_i_kho_n_c_a_b_n">Vui lòng nhập email hoặc số di động để tìm kiếm tài khoản của bạn.</string>
    <string name="nh_p_m_t_kh_u_m_i">Nhập mật khẩu mới</string>
    <string name="nh_p_l_i_m_t_kh_u_m_i">Nhập lại mật khẩu mới</string>
    <string name="da_co_tai_khoan_chua">Đã có tài khoản chưa ?</string>
    <string name="h_t_t_k_b">Hãy tìm tài khoản của bạn</string>
    <string name="V_l_n_e">Vui lòng nhập email để tìm kiếm tài khoản của bạn.</string>
    <string name="m_d_d_g">Mã đã được gửi đến chỉ email của bạn. Hãy Nhập mã đó tại đây</string>


    <!--Nút bấm -->
    <string name="g_oo">Google</string>
    <string name="fa_ce">Facebook</string>
    <string name="login_fa">Đăng nhập với Facebook</string>
    <string name="login_go">Đăng nhập với Google</string>
    <string name="ng_k">Đăng ký</string>
    <string name="ng_nh_p">Đăng nhập</string>


    <!--   Tiêu đề Trang                              -->
    <string name="dia_chi">Địa chỉ</string>
    <string name="dia_chi_ban">Địa điểm của bạn</string>
    <string name="add_dia">Thêm địa chỉ </string>
    <string name="sua_dia">Sửa địa chỉ </string>


    <string name="doi_pass">Đổi mật khẩu</string>
    <string name="sua_thong_t">Sửa thông tin</string>
    <string name="h_v_t">Họ và tên</string>
    <string name="s_d_t">Số điện thoại</string>
    <string name="d_c_E">Địa chỉ Email</string>
    <string name="n_s">Ngày sinh</string>


    <string name="dieu_khoan_vs_chinh">Điều khoản và Chính sách</string>


    <string name="lich_s_h_d">Lịch sử hóa đơn</string>


    <string name="c_d">Cài đặt </string>
    <string name="gi_d_t">Giao diện tối</string>
    <string name="cai_d_t_b">Cài đặt thông báo</string>


    <string name="lien_he">Liên hệ và góp ý  </string>


    /////////////////////
    <string name="g_i">Gửi</string>
    <string name="l_u">Lưu </string>
    <string name="dang_xuat">Đăng Xuất</string>
    <string name="shop">Trang Chủ</string>
    <string name="explore">Tìm Kiếm</string>
    <string name="cart">Giỏ Hàng</string>
    <string name="favorite">Yêu Thích</string>
    <string name="account">Tài Khoản</string>


    <string name="facebook_app_id">1125742061638886</string>
    <string name="fb_login_protocol_scheme">fb1125742061638886</string>
    <string name="facebook_client_token">91d0141051fbfdc3451686e064c72b5e</string>
    <string name="server_client_id">988916052190-132lhj8c3hm32inelh1n7u7u4ktfhtqn.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_notification_channel_id" />

    <string name="lbl_sotien">Số Tiền</string>
    <string name="lbl_donhang">DEMO</string>
    <string name="btn_create_order">Tạo Đơn Hàng</string>
    <string name="txt_amount_init">1000</string>
    <string name="txt_amount_hint">1000</string>
    <string name="btn_pay">Thanh Toán</string>
    <string name="lbl_zptranstoken">zptranstoken</string>
    <string name="to_webview">To WebView</string>
</resources>