<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvDangNhapTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ng_nh_p"
        android:textSize="32sp"
        android:layout_marginTop="37dp"
        android:layout_marginStart="40dp"
        android:textColor="@color/black"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBack"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nh_p_email_v_m_t_kh_u_c_a_b_n"
        android:textSize="18sp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDangNhapTitle"/>
    
    
    <EditText
        android:id="@+id/edtEmailDangNhap"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:hint="@string/nh_p_email"
        android:drawableStart="@drawable/ic_mess"
        android:drawablePadding="12dp"
        android:paddingStart="16dp"
        android:background="@drawable/bg_edit_text"

        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edtPassWordDangNhap"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        android:hint="@string/nh_p_password"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="12dp"
        android:paddingStart="16dp"
        android:background="@drawable/bg_edit_text"

        app:layout_constraintTop_toBottomOf="@id/edtEmailDangNhap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvQuenMK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="@string/qu_n_m_t_kh_u"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:textColor="@color/black"

        app:layout_constraintTop_toBottomOf="@id/edtPassWordDangNhap"
        app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
        android:id="@+id/ckbNhoMK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvQuenMK"/>

    <TextView
        android:id="@+id/tvNhoMK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="Lưu mật khẩu. "
        android:textColor="@color/black"

        app:layout_constraintStart_toEndOf="@id/ckbNhoMK"
        app:layout_constraintBottom_toBottomOf="@id/ckbNhoMK"
        app:layout_constraintTop_toTopOf="@id/ckbNhoMK"/>

    <TextView
        android:id="@+id/tvDangNhap"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/ng_nh_p"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/bg_btn"

        app:layout_constraintTop_toBottomOf="@id/tvNhoMK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvKhongTK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kh_ng_c_t_i_kho_n"
        android:textSize="16sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:textColor="@color/black"
        android:layout_marginTop="13dp"

        app:layout_constraintRight_toLeftOf="@id/tvTextDangky"
        app:layout_constraintTop_toBottomOf="@id/tvDangNhap"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tvTextDangky"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ng_k"
        android:textSize="16sp"
        android:layout_marginStart="5dp"
        android:textColor="#B43838"
        android:layout_marginTop="13dp"

        app:layout_constraintLeft_toRightOf="@id/tvKhongTK"
        app:layout_constraintTop_toBottomOf="@id/tvDangNhap"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvGoogle"
        android:layout_width="55dp"
        android:layout_height="55dp"
        app:cardCornerRadius="12dp"
        android:background="#F8F7F7"
        android:layout_marginTop="49dp"
        app:layout_constraintRight_toLeftOf="@id/cvFaceBook"
        app:layout_constraintTop_toBottomOf="@id/tvTextDangky"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:src="@drawable/ic_google"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvFaceBook"
        android:layout_width="55dp"
        android:layout_height="55dp"
        app:cardCornerRadius="12dp"
        android:background="#F8F7F7"
        android:layout_marginTop="49dp"
        app:layout_constraintLeft_toRightOf="@id/cvGoogle"
        app:layout_constraintTop_toBottomOf="@id/tvTextDangky"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:src="@drawable/ic_facebook"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>