<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ForgotPassActivity">

  <ImageView
      android:id="@+id/ivBack"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_back"
      android:layout_marginTop="20dp"
      android:layout_marginStart="20dp"

      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

  <ImageView
      android:id="@+id/ivLogo"
      android:layout_width="128dp"
      android:layout_height="89dp"
      android:src="@drawable/imghelloscreen"
      android:layout_marginStart="20dp"

      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>


  <EditText
      android:id="@+id/edtPassChange"
      android:layout_width="0dp"
      android:layout_height="60dp"
      android:layout_marginHorizontal="30dp"
      android:layout_marginTop="120dp"
      android:hint="@string/nh_p_m_t_kh_u_m_i"
      android:drawableStart="@drawable/ic_lock"
      android:drawablePadding="12dp"
      android:paddingStart="16dp"
      android:background="@drawable/bg_edit_text"

      app:layout_constraintTop_toBottomOf="@id/ivLogo"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>

  <EditText
      android:id="@+id/edtRePassChange"
      android:layout_width="0dp"
      android:layout_height="60dp"
      android:layout_marginHorizontal="30dp"
      android:layout_marginTop="10dp"
      android:hint="@string/nh_p_l_i_m_t_kh_u_m_i"
      android:drawableStart="@drawable/ic_lock"
      android:drawablePadding="12dp"
      android:paddingStart="16dp"
      android:background="@drawable/bg_edit_text"

      app:layout_constraintTop_toBottomOf="@id/edtPassChange"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>

  <TextView
      android:id="@+id/tvDangKy"
      android:layout_width="0dp"
      android:layout_height="55dp"
      android:layout_marginTop="30dp"
      android:layout_marginHorizontal="80dp"
      android:text="@string/l_u"
      android:gravity="center"
      android:textSize="20sp"
      android:textStyle="bold"
      android:textColor="@color/white"
      android:background="@drawable/bg_btn"

      app:layout_constraintTop_toBottomOf="@id/edtRePassChange"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>