<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:ignore="OnClick"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:onClick="BackToLogin"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvDangNhapTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/be_vietnam_medium"
        android:text="@string/ng_k"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/nh_p_th_ng_tin_ng_nh_p_c_a_b_n"
        android:fontFamily="@font/be_vietnam_medium"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDangNhapTitle" />


    <EditText
        android:id="@+id/edtHoTen"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/ic_account"
        style="@style/Text"
        android:drawablePadding="12dp"
        android:paddingEnd="10dp"
        android:hint="@string/h_v_t_n"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <EditText
        android:id="@+id/edtEmailDangNhap"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/ic_mess"
        android:drawablePadding="12dp"
        android:paddingEnd="10dp"
        android:hint="@string/email"
        style="@style/Text"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtHoTen" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtPassWordDangKy"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:passwordToggleEnabled="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmailDangNhap">

        <EditText
            android:id="@+id/editPasswordDangKy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edit_text"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="12dp"
            style="@style/Text"
            android:hint="@string/nh_p_password"
            android:paddingEnd="40dp"
            android:paddingStart="16dp"
            app:passwordToggleEnabled="true"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtRePassWordDangKy"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:passwordToggleEnabled="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassWordDangKy"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/editRePasswordDangky"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edit_text"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="12dp"
            style="@style/Text"
            android:hint="@string/nh_p_password"
            android:paddingEnd="40dp"
            android:paddingStart="16dp"
            app:passwordToggleEnabled="true"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/tvDangKy"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/bg_btn"
        android:gravity="center"
        android:text="@string/ng_k"
        style="@style/Text_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtRePassWordDangKy" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="15dp"
        android:fontFamily="@font/be_vietnam_medium"
        android:text="@string/da_co_tai_khoan_chua"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.351"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDangKy" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/ng_nh_p"
        android:textColor="#B43838"
        android:onClick="BackToLogin"
        android:textSize="16sp"
        android:fontFamily="@font/be_vietnam_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/tvDangKy" />


</androidx.constraintlayout.widget.ConstraintLayout>