<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.Activity.ChangeiPassActivity">



        <ImageView
            android:id="@+id/img_back_Changei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@+id/textView26"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView26"
            app:layout_constraintVertical_bias="0.529" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="25dp"
            android:text="@string/doi_pass"
            android:textColor="#000000"
            android:fontFamily="@font/be_vietnam_medium"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView26"
            app:srcCompat="@drawable/ic_vienduoi" />

        <EditText
            android:id="@+id/edtPassChange"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:fontFamily="@font/be_vietnam_medium"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/bg_edit_text"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="12dp"
            android:inputType="textPassword"
            android:hint="@string/nh_p_m_t_kh_u_m_i"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.266"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView17" />

        <EditText
            android:id="@+id/edtRePassChange"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/be_vietnam_medium"
            android:background="@drawable/bg_edit_text"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="12dp"
            android:hint="@string/nh_p_l_i_m_t_kh_u_m_i"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtPassChange"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvDangKy"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_btn"
            android:gravity="center"
            android:text="@string/l_u"
            android:textColor="@color/white"
            android:textSize="20sp"

            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtRePassChange"
            app:layout_constraintVertical_bias="0.214" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />




</androidx.constraintlayout.widget.ConstraintLayout>