<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">



    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="128dp"
        android:layout_height="89dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/imghelloscreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edtPass"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="12dp"
        android:hint="Nhập mật khẩu"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <EditText
        android:id="@+id/edtPassChange"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="195dp"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="12dp"
        style="@style/Text"
        android:hint="@string/nh_p_m_t_kh_u_m_i"
        android:paddingStart="16dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <EditText
        android:id="@+id/edtRePassChange"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="12dp"
        style="@style/Text"
        android:hint="@string/nh_p_l_i_m_t_kh_u_m_i"
        android:paddingStart="16dp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPassChange"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnLuu"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_btn"
        android:gravity="center"
        android:onClick="onCLickChangepass"
        android:text="@string/l_u"
        style="@style/Text_btn"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRePassChange"
        app:layout_constraintVertical_bias="0.214"
        tools:ignore="OnClick" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8508892" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>